--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
-version: '3.8'
 
 services:
-  next:
-   build:
-    context: .
-    dockerfile: Dockerfile
+  nextjs:
+    build: .
     ports:
       - "3000:3000"
     volumes:
       - .:/app
       - /app/node_modules
+    stdin_open: true
+    tty: true
     environment:
       - NODE_ENV=development
