--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.1.2",
     "class-variance-authority": "^0.7.0",
+    "jotai": "^2.10.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
