--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Active",
-  "short_name": "Active",
+  "name": "active",
+  "short_name": "active",
   "description": "",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000"
+  "theme_color": "#1181ED"
 }
